# OpenGL_SDL2_Win_Env

./: CMakeLists.txt  OpenglTest.cpp  README.md  main.cpp
SDL2-2.24.0/include/SDL2/: SDL_thread.h
SDL2-2.24.0/lib/cmake/SDL2/: sdl2-config.cmake
opengl/glad/include/glad/: glad.h
opengl/glad/src/: glad.c
